; ModuleID = '/home/carl/AnghaBench/linux/drivers/acpi/acpica/extr_nsutils.c_acpi_ns_terminate.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/acpi/acpica/extr_nsutils.c_acpi_ns_terminate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ns_terminate = common dso_local global i32 0, align 4
@acpi_gbl_root_node = common dso_local global i32 0, align 4
@ACPI_MTX_NAMESPACE = common dso_local global i32 0, align 4
@return_VOID = common dso_local global i32 0, align 4
@ACPI_DB_INFO = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [17 x i8] c"Namespace freed\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @acpi_ns_terminate() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @ns_terminate, align 4
  %3 = call i32 @ACPI_FUNCTION_TRACE(i32 %2)
  %4 = load i32, i32* @acpi_gbl_root_node, align 4
  %5 = call i32 @acpi_ns_delete_namespace_subtree(i32 %4)
  %6 = load i32, i32* @ACPI_MTX_NAMESPACE, align 4
  %7 = call i32 @acpi_ut_acquire_mutex(i32 %6)
  store i32 %7, i32* %1, align 4
  %8 = load i32, i32* %1, align 4
  %9 = call i64 @ACPI_FAILURE(i32 %8)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %13

11:                                               ; preds = %0
  %12 = load i32, i32* @return_VOID, align 4
  br label %13

13:                                               ; preds = %11, %0
  %14 = load i32, i32* @acpi_gbl_root_node, align 4
  %15 = call i32 @acpi_ns_delete_node(i32 %14)
  %16 = load i32, i32* @ACPI_MTX_NAMESPACE, align 4
  %17 = call i32 @acpi_ut_release_mutex(i32 %16)
  %18 = load i32, i32* @ACPI_DB_INFO, align 4
  %19 = call i32 @ACPI_DEBUG_PRINT(i32 ptrtoint ([17 x i8]* @.str to i32))
  %20 = load i32, i32* @return_VOID, align 4
  ret void
}

declare dso_local i32 @ACPI_FUNCTION_TRACE(i32) #1

declare dso_local i32 @acpi_ns_delete_namespace_subtree(i32) #1

declare dso_local i32 @acpi_ut_acquire_mutex(i32) #1

declare dso_local i64 @ACPI_FAILURE(i32) #1

declare dso_local i32 @acpi_ns_delete_node(i32) #1

declare dso_local i32 @acpi_ut_release_mutex(i32) #1

declare dso_local i32 @ACPI_DEBUG_PRINT(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
